gcp_setup/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: swiam-gql
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: swiam-gql
    tier: backend
  type: NodePort
